[project]
name = "vidtoolz-replace-audio"
version = "0.0.2"
description = "Replace audio for a video file"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "vidtoolz"
]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-replace-audio"
Changelog = "https://github.com/sukhbinder/vidtoolz-replace-audio/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-replace-audio/issues"
CI = "https://github.com/sukhbinder/vidtoolz-replace-audio/actions"

[project.entry-points."vidtoolz_plugins"]
repaudio = "vidtoolz_replace_audio:repaudio_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
